# alsit

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  alsit.sh  build.rs  build_docker.sh  build_project.sh  config.json
script/test_image/: Dockerfile  build_image.sh
sql/: check_structure.sql  db.env  insert_user.sql  insert_val.sql  query_user.sql  schema.sql  select_table.sql  structure.sql
src/: crypto.rs  main.rs
src/account/: id_query.sql  insert_user.sql  mod.rs  query_user.sql
src/judge/: mod.rs  virtualization.rs
src/ticket/: insert_ticket.sql  mod.rs  query_ticket.sql
